--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -17,8 +17,8 @@ header {
 		z-index: 3;
 
 		@media only screen and (max-width: $md-breakpoint) {
-			align-items: flex-end;
-			flex-direction: column-reverse;
+			align-items: center;
+			flex-direction: row;
 			height: 50px;
 			position: fixed;
 			width: 100%;
