--- a/scss/layouts/_internal.scss
+++ b/scss/layouts/_internal.scss
@@ -32,7 +32,35 @@
 			.support-text {
 
 				.btn {
-					margin-left: 0;
+					margin-left: 10px;
+				}
+			}
+		}
+
+		&.events {
+
+			.list {
+				flex-wrap: wrap;
+
+				.entry {
+					align-items: center;
+					display: flex;
+					margin-bottom: 60px;
+
+					@include flex-col-layout();
+
+					img {
+						max-width: 240px;
+					}
+
+					.ccm-block-page-list-page-entry-text {
+						padding: 0 60px;
+						
+
+					@media only screen and (max-width: $lg-breakpoint) {
+			        	margin-top: 60px;
+			    	}
+				  }
 				}
 			}
 		}
@@ -84,5 +112,47 @@
 		height: 60px;
 		margin-top: 20px;
 		width: 100%
+	}
+
+	//events page list 
+
+	.ccm-block-page-list-date {
+		margin: 5px auto 20px;
+		font-weight: 600;
+	}
+
+	.ccm-block-page-list-description {
+		line-height: 1.4em;
+	}
+
+	.ccm-block-page-list-page-entry-horizontal {
+		margin-bottom: 50px;
+	}
+
+	.our-team {
+		
+		.list {
+			flex-wrap: wrap;
+			justify-content: space-between;
+
+			@include flex-col-layout();
+			
+			.entry {
+				margin-bottom: 40px;
+				width: 30%;
+
+				@include mobile-full-width();
+
+				.ccm-block-page-list-title {
+					margin: 20px auto;
+					text-align: center;
+				}
+				.ccm-block-page-list-description {
+					margin-top: 0;
+					text-align: center;
+				}
+			}
+
+		}
 	}
 }
