--- a/_css/wufoo.css
+++ b/_css/wufoo.css
@@ -10,9 +10,18 @@ html.embed {
 	text-align: left;
 }
 
-.confirm .h2 {
+.confirm h2 {
 	font-size: 14px;
 	color: white;
 	margin: 0;
-	padding: 0;
+	padding: 30px 0;
+}
+
+.wufoo label, .wufoo label.desc, .wufoo legend.desc, .likert caption {
+	color: #ffffff !important;
+}
+
+.wufoo li.focused {
+	background: none !important;
+	border: 1px solid #fff !important;
 }
