--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -14,12 +14,13 @@ header {
 		height: 50px;
 		justify-content: flex-end;
 		padding-right: 20px;
-		z-index: 3;
+		z-index: 2;
 
 		@media only screen and (max-width: $md-breakpoint) {
-			align-items: center;
-			flex-direction: row;
+			align-items: flex-end;
+			flex-direction: column-reverse;
 			height: 50px;
+			justify-content: center;
 			position: fixed;
 			width: 100%;
 		}
@@ -70,7 +71,7 @@ header {
 		.logo {
 			width: 230px;
 
-			@media only screen and (max-width: $md-breakpoint) {
+			@media only screen and (max-width: $xl-breakpoint) {
 				width: 180px;
 				align-self: center;
 			}
@@ -97,7 +98,7 @@ header {
 			width: 30px;
 			z-index: 5;
 
-			@media only screen and (min-width: $md-breakpoint) {
+			@media only screen and (min-width: $lg-breakpoint) {
 				display: none;
 			}
 
